fixed spacing on unfilled rows

--- a/styles/Chart.module.scss
+++ b/styles/Chart.module.scss
@@ -1,18 +1,3 @@
-// scss-lint:disable SelectorFormat
-.YT { grid-area: YT; }
-.NT { grid-area: NT; }
-.NU { grid-area: NU; }
-.BC { grid-area: BC; }
-.AB { grid-area: AB; }
-.SK { grid-area: SK; }
-.MB { grid-area: MB; }
-.ON { grid-area: ONT; }
-.QC { grid-area: QC; }
-.NL { grid-area: NL; }
-.NS { grid-area: NS; }
-.NB { grid-area: NB; }
-.PE { grid-area: PE; }
-
 .container {
 
   border-radius: 5px;
@@ -20,6 +5,7 @@
   display: flex;
   flex-direction: column;
 
+  margin: 10px;
   padding: 5px;
 
   h4 {
